--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "homepage": "http://hryshko-denys.github.io/react-template",
-  "name": "react-template",
+  "homepage": "http://hryshko-denys.github.io/yalantis",
+  "name": "yalantis",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "uuidv4": "^6.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
